# pixelforge

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: bench_color_convert_4k.rs  encode_av1.rs  encode_h264.rs  encode_h265.rs  query_capabilities.rs  verify_all.rs
shader/: README.md  color_convert.comp  color_convert.spv  compile.sh
src/: error.rs  image.rs  lib.rs  vulkan.rs
src/converter/: mod.rs  pipeline.rs  shader.rs
src/encoder/: mod.rs  pipeline.rs  resources.rs
src/encoder/av1/: api.rs  encode.rs  init.rs  mod.rs  session_params.rs
src/encoder/dpb/: h265.rs  reference_lists.rs
src/encoder/h264/: api.rs  encode.rs  init.rs  mod.rs  session_params.rs
src/encoder/h265/: api.rs  encode.rs  init.rs  mod.rs  session_params.rs
